--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
 </head>
 
 <body>
-    <input class="divResult" value="0" readonly>
-    <div class="touchpad">
-        <button class="button gray" onclick="AC()">AC</button>
-        <button class="button gray">+/-</button>
-        <button class="button operations gray">%</button>
-        <button class="button operations orange">/</button>
-        <button class="button number darkGray">7</button>
-        <button class="button number darkGray">8</button>
-        <button class="button number darkGray">9</button>
-        <button class="button operations orange">x</button>
-        <button class="button number darkGray">4</button>
-        <button class="button number darkGray">5</button>
-        <button class="button number darkGray">6</button>
-        <button class="button operations orange">-</button>
-        <button class="button number darkGray">1</button>
-        <button class="button number darkGray">2</button>
-        <button class="button number darkGray">3</button>
-        <button class="button operations orange">+</button>
-        <button class="button number darkGray zero">0</button>
-        <button class="button number darkGray">.</button>
-        <button class="button orange" onclick="calculate()">=</button>
+    <div id="container">
+        <input class="divResult" value="0" readonly>
+        <div class="touchpad">
+            <button class="button gray" onclick="AC()">AC</button>
+            <button class="button gray">+/-</button>
+            <button class="button operations gray">%</button>
+            <button class="button operations orange">/</button>
+            <button class="button number darkGray">7</button>
+            <button class="button number darkGray">8</button>
+            <button class="button number darkGray">9</button>
+            <button class="button operations orange">x</button>
+            <button class="button number darkGray">4</button>
+            <button class="button number darkGray">5</button>
+            <button class="button number darkGray">6</button>
+            <button class="button operations orange">-</button>
+            <button class="button number darkGray">1</button>
+            <button class="button number darkGray">2</button>
+            <button class="button number darkGray">3</button>
+            <button class="button operations orange">+</button>
+            <button class="button number darkGray zero">0</button>
+            <button class="button number darkGray">.</button>
+            <button class="button orange" onclick="calculate()">=</button>
+        </div>
     </div>
 </body>
 <script src="./index.js"></script>
